--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "EvaMariaBot",
+    "name": "MovieWorld",
     "description": "When you going to send file on telegram channel this bot will save that in database, So you can search that easily in inline mode",
     "stack": "container",
     "keywords": [
@@ -15,8 +15,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/EvamariaTG/EvaMaria",
-    "repository": "https://github.com/EvamariaTG/EvaMaria",
+    "website": "https://github.com/LordSA/movie-world",
+    "repository": "https://github.com/LordSA/movie-world",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
@@ -32,7 +32,7 @@
         },
         "CHANNELS": {
             "description": "Username or ID of channel or group. Separate multiple IDs by space.",
-            "required": false
+            "required": true
         },
         "ADMINS": {
             "description": "Username or ID of Admin. Separate multiple Admins by space.",
@@ -40,7 +40,7 @@
         },
         "PICS": {
             "description": "Add some telegraph link of pictures .",
-            "required": false
+            "required": true
         },
         "LOG_CHANNEL": {
             "description": "Bot Logs,Give a channel id with -100xxxxxxx",
@@ -71,8 +71,8 @@
             "required": true
         },
         "DATABASE_NAME": {
-            "description": "Name of the database in mongoDB. For more help watch this video - https://youtu.be/dsuTn4qV2GA",
-            "required": false
+            "description": "Name of the database in mongodb (Default MovieWorld). For more help watch this video - https://youtu.be/dsuTn4qV2GA",
+            "required": true
         },
         "COLLECTION_NAME": {
             "description": "Name of the collections. Defaults to Telegram_files. If you are using the same database, then use different collection name for each bot",
@@ -86,7 +86,7 @@
         },
         "IMDB": {
             "description": "Imdb, the view of information when making True/False ",
-            "required": false
+            "required": true
         },
         "SINGLE_BUTTON": {
             "description": "choose b/w single or double buttons https://github.com/EvamariaTG/EvaMaria/issues/22",
