--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,22 @@ umongo==3.0.1
 requests
 bs4
 imdbpy
+telegraph==1.4.1
+googletrans==3.1.0a0
+gTTS
+asyncio==3.4.3
+aiohttp==3.7.4
+aiofiles
+requests
+pyshorteners
+bs4
+imdbpy
+youtube-search-python==1.4.6
+youtube_search
+youtube-dl
+yt-dlp
+wget
+python-arq
+ffmpeg-python
+requests
+ytthumb
