--- a/app.json
+++ b/app.json
@@ -74,6 +74,16 @@
             "description": "Name of the database in mongodb (Default MovieWorld). For more help watch this video - https://youtu.be/dsuTn4qV2GA",
             "required": true
         },
+        "HNDLR": {
+            "description": "Handler | Default (!)",
+            "value": "!",
+            "required": false 
+        },
+        "GROUP_MODE": {
+            "description": "Anyone can play, if set to True. Set it to False to restrict play access to Sudo Users/Contacts only",
+            "value": "True",
+            "required": true 
+        },
         "COLLECTION_NAME": {
             "description": "Name of the collections. Defaults to Telegram_files. If you are using the same database, then use different collection name for each bot",
             "value": "Telegram_files",
