--- a/app.json
+++ b/app.json
@@ -110,6 +110,9 @@
     "addons": [],
     "buildpacks": [{
         "url": "heroku/python"
+    },
+    {
+        "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
     }],
     "formation": {
         "worker": {
