--- a/requirements.txt
+++ b/requirements.txt
@@ -7,23 +7,29 @@ umongo==3.0.1
 requests
 bs4
 imdbpy
-telegraph==1.4.1
-googletrans==3.1.0a0
-gTTS
-asyncio==3.4.3
-aiohttp==3.7.4
-aiofiles
-requests
-pyshorteners
-bs4
-youtube-search-python==1.4.6
-youtube_search
 youtube-dl
+youtube_search
+requests
+googletrans==3.1.0a0
+telegraph==1.4.1
+beautifulsoup4
+aiohttp==3.7.4
+gTTS
+NumPy
+glitch_this
+opencv-python-headless
+youtube-search-python==1.4.6
 yt-dlp
+pypng
+Pillow
 wget
-python-arq
-ffmpeg-python
+aiofiles
+psutil
+wheel
+humanize
 ytthumb
-python-dotenv
-pillow
-py-tgcalls==0.8.2
+pypdf2
+PyPDF2
+pyshorteners
+ffmpeg-python
+asyncio==3.4.3
