--- a/app.json
+++ b/app.json
@@ -42,6 +42,9 @@
             "description": "Add some telegraph link of pictures .",
             "required": true
         },
+        "VIDS": {
+            "description": "add some telegraph link of video if you're not using pics.",
+            "required": false
         "LOG_CHANNEL": {
             "description": "Bot Logs,Give a channel id with -100xxxxxxx",
             "required": true
