--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "MovieWorld",
+    "name": "Eren-Yeager-ADV5.1.2",
     "description": "When you going to send file on telegram channel this bot will save that in database, So you can search that easily in inline mode",
     "stack": "container",
     "keywords": [
@@ -15,8 +15,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/LordSA/movie-world",
-    "repository": "https://github.com/LordSA/movie-world",
+    "website": "https://github.com/LordSA/Eren-Yeager-ADV5.1.2",
+    "repository": "https://github.com/LordSA/Eren-Yeager-ADV5.1.2",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
@@ -77,16 +77,7 @@
             "description": "Name of the database in mongodb (Default MovieWorld). For more help watch this video - https://youtu.be/dsuTn4qV2GA",
             "required": true
         },
-        "HNDLR": {
-            "description": "Handler | Default (!)",
-            "value": "!",
-            "required": false 
-        },
-        "GROUP_MODE": {
-            "description": "Anyone can play, if set to True. Set it to False to restrict play access to Sudo Users/Contacts only",
-            "value": "True",
-            "required": true 
-        },
+        
         "COLLECTION_NAME": {
             "description": "Name of the collections. Defaults to Telegram_files. If you are using the same database, then use different collection name for each bot",
             "value": "Telegram_files",
@@ -113,9 +104,6 @@
     "addons": [],
     "buildpacks": [{
         "url": "heroku/python"
-    },
-    {
-        "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
     }],
     "formation": {
         "worker": {
