--- a/app.json
+++ b/app.json
@@ -77,8 +77,7 @@
         "DATABASE_NAME": {
             "description": "Name of the database in mongodb (Default MovieWorld). For more help watch this video - https://youtu.be/dsuTn4qV2GA",
             "required": true
-        },
-        
+        },        
         "COLLECTION_NAME": {
             "description": "Name of the collections. Defaults to Telegram_files. If you are using the same database, then use different collection name for each bot",
             "value": "Telegram_files",
@@ -91,7 +90,7 @@
         },
         "IMDB": {
             "description": "Imdb, the view of information when making True/False ",
-            "required": true
+            "required": false
         },
         "SINGLE_BUTTON": {
             "description": "choose b/w single or double buttons https://github.com/EvamariaTG/EvaMaria/issues/22",
