--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,48 @@
+# Core
 pyrogram>=2.0.30
-# A
+tgcrypto
+python-dotenv
+requests
+psutil
+wheel
+
+# Async
 aiofiles
 aiohttp==3.9.2
 asyncio==3.4.3
-# B
+
+# Parsing & scraping
 beautifulsoup4
 bs4
-# C
-#carbonnow
-countryinfo
-# F
-ffmpeg-python
-# G
-glitch_this
-gTTS
 googletrans==3.1.0a0
-# H
-humanize
-# I
 imdbpy==2021.4.18
-# M
-marshmallow==3.14.1
-motor==2.5.1
-# N
-NumPy
-# O
-opencv-python-headless
-# P
-Pillow
-psutil
-py-tgcalls==0.8.2
-pymongo[srv]==4.6.3
-PyPDF2
-Pypdf2
-pypng
-pyshorteners
-python-dotenv
-# R
-requests
-# S
-speedtest-cli
-# T
+countryinfo
 telegraph==1.4.1
-tgcrypto
-tswift
-# U
+
+# Multimedia
+ffmpeg-python
+Pillow
+opencv-python-headless
+gTTS
+glitch_this
+
+# Mongo / DB
+pymongo[srv]==4.6.3
+motor==2.5.1
 umongo==3.0.1
-# W
-wget
-wheel
-# Y
+marshmallow==3.14.1
+
+
+# Music / Calls
+py-tgcalls==2.2.8
+
+# YouTube / Media
 yt-dlp
-ytthumb
 youtube-dl
 youtube_search
 youtube-search-python==1.4.6
+ytthumb
+tswift
+speedtest-cli
+humanize
+wget
